added level filter

--- a/app/views/shared/_level_filter.html.erb
+++ b/app/views/shared/_level_filter.html.erb
@@ -8,17 +8,22 @@
         </button>
         <ul class="dropdown-menu">
           <li><a data-filter-target="level"
+                 data-target="Beginner"
                  data-action="click->filter#level"
                  class="dropdown-item"
-                 href="#" >Beginner</a></li>
+                 >Beginner</a></li>
           <li><a data-filter-target="level"
+                 data-target="Intermediate"
                  data-action="click->filter#level"
                  class="dropdown-item"
-                 href="#">Intermediate</a></li>
+                 >Intermediate</a></li>
           <li><a data-filter-target="level"
+                 data-target="Advanced"
                  data-action="click->filter#level"
                  data-action="click->filter#level"
-                 class="dropdown-item" href="#">Advanced</a></li>
+                 class="dropdown-item"
+                 >Advanced</a></li>
         </ul>
   </div>
+
 </div>
