--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -1,9 +1,9 @@
 .home-banner {
-  background-image: asset-url("teamup-banner.jpg");
+  background-image: asset-url("teamup-banner-2.jpg");
   background-size: cover;
   height: 650px;
   background-position: center;
-  padding: 170px 0;
+  padding-top: 80px;
   background-color: grey;
 }
 
@@ -12,18 +12,15 @@
   text-shadow: 2px 2px 5px rgba(240, 240, 240, 0.8);
   font-size: 54px;
   font-weight: bold;
+  text-align: center;
 
   // Change font to make the h2 pop out of BG image
   color: #FFFFFF;
-  font-size: 60px;
   font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.home-banner p {
-  font-size: 20px;
-  color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+.button {
+  margin-top: 325px;
 }
