--- a/app/views/shared/_home_banner.html.erb
+++ b/app/views/shared/_home_banner.html.erb
@@ -1,9 +1,9 @@
 <div class="home-banner">
   <div class="container">
-    <h2>Find your new sports group</h2>
+    <h2>Find a sport near you!</h2>
     <br>
-    <%= link_to "Create Your Event", new_user_registration_path, class: "btn btn-primary btn-lg" %>
-    <br>
-    <%= link_to "Find an Event", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+    <div class="button d-flex justify-content-center">
+      <%= link_to "Find an Event", events_path, class: "btn btn-primary btn-lg" %>
+    </div>
   </div>
 </div>
