--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,6 +6,7 @@
     <%= render "shared/category_bar" %>
 
     <%= render "shared/level_filter" %>
+    <%= render "shared/city_filter" %>
 
     <div class="results-card-container">
       <% if params[:query].present? %>
