--- a/app/views/dashboard/profile.html.erb
+++ b/app/views/dashboard/profile.html.erb
@@ -32,6 +32,7 @@
   <br><br>
   <hr>
 
+<div >
   <div class="user-events">
     <h3>Your Upcoming Events</h3>
       <div class="d-flex flex-wrap justify-content-between">
