--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -13,7 +13,7 @@
       </button>
       <ul class="dropdown-menu">
       <% @unique_citys.each do |city| %>
-        <li class="dropdown-item"><%= link_to "#{city}", events_path(query: "#{city}") %></li>
+        <li class="dropdown-item"><%= link_to "#{city}", events_path(city: "#{city}") %></li>
       <% end %>
       </ul>
     </div>
