nav text change

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,10 +15,11 @@
   height: 40px;
 }
 
-.navbar-teamup h4 {
+.navbar-teamup h3 {
   margin: 0px;
 }
 
 .navbar-teamup li {
-  line-height: 35px;
+  line-height: 38px;
+  font-size: 18px;
 }
