--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -2,9 +2,15 @@
   padding: 2%;
 }
 
+.img{
+  display: flex;
+  justify-content: center;
+}
+
 .user-img {
-  text-align: center;
   border-radius: 50%;
+  width: 300px;
+  height: 300px;
 }
 
 .welcome-msg {
