--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -27,6 +27,9 @@
     </div>
     <% end %>
   </div>
+  <br><br>
+  <div class="text-center">
+    <%= link_to "See all Events in #{@city}", events_path(query: "#{@city}"), class: "btn btn-primary btn-lg" %>
+  </div>
   <br>
-  <%= link_to "See all Events in #{@city}", events_path(query: "#{@city}"), class: "btn btn-primary btn-lg" %>
 </div>
