--- a/app/assets/stylesheets/components/_event_card_long.scss
+++ b/app/assets/stylesheets/components/_event_card_long.scss
@@ -11,12 +11,15 @@
   height: 160px;
   margin: 20px 0px 0px 0px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 10px;
   overflow: hidden;
+  box-shadow: 2px 2px 8px #d4d4d4;
 }
 
-h5 {
+.event-card-long-title {
   font-weight: bold;
+  color: $blue;
+  margin: 8px 0px;
 }
 
 a {
@@ -26,13 +29,13 @@ a {
 
 .event-card-long-image {
   height: 100%;
-  width: 140px;
+  width: 120px;
   object-fit: cover;
 }
 
 .event-card-long-right {
   width: 100%;
-  padding: 10px;
+  padding: 15px 15px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -42,9 +45,7 @@ a {
   margin-top: 0;
 }
 
-.event-card-long-location,
-.event-card-long-date,
-.event-card-long-attendance {
-  margin: 5px 0;
+.event-card-long-text {
+  margin: 0px;
   font-size: 15px;
 }
