--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -9,18 +9,13 @@
 
 .home-banner h2 {
   margin: 0;
-  text-shadow: 2px 2px 5px rgba(240, 240, 240, 0.8);
-  font-size: 54px;
-  font-weight: bold;
-  text-align: center;
-
-  // Change font to make the h2 pop out of BG image
   color: #FFFFFF;
-  font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 54px;
+  font-weight: 900;
+  text-align: center;
 }
 
-.button {
+.home-banner .button {
   margin-top: 325px;
 }
