--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,124 +4,126 @@
   <% else %>
       <img style="width: 100%" src="https://placehold.co/900x600" alt="main image">
   <% end %>
+</div>
+
+<div class="container">
   <h1 class="mt-3"><strong><%= @event.title %></strong></h1>
-</div>
+  <%# Details section %>
+  <div class="container p-5 group-info">
+    <h3 >Details</h3>
+    <ul class="fa-ul">
+      <li>
+        <div class="d-flex flex-column">
+          <span class="fa-li"><i class="fa-solid fa-calendar-days"></i></span> <%= @event.start_date.strftime('%a, %b %d %Y %H:%M') %>
+          <a href="#">Add to Calendar</a>
+        </div>
+      </li>
+      <li><span class="fa-li"><i class="fa-solid fa-location-dot"></i></span> <%= @event.address %></li>
+      <li><span class="fa-li"><i class="fa-solid fa-arrow-up-short-wide"></i></span> <%= @event.level %></li>
+    </ul>
 
-<%# Details section %>
-<div class="container p-5 group-info">
-  <h3 >Details</h3>
-  <ul class="fa-ul">
-    <li>
-      <div class="d-flex flex-column">
-        <span class="fa-li"><i class="fa-solid fa-calendar-days"></i></span> <%= @event.start_date.strftime('%a, %b %d %Y %H:%M') %>
-        <a href="#">Add to Calendar</a>
-      </div>
-    </li>
-    <li><span class="fa-li"><i class="fa-solid fa-location-dot"></i></span> <%= @event.address %></li>
-    <li><span class="fa-li"><i class="fa-solid fa-arrow-up-short-wide"></i></span> <%= @event.level %></li>
-  </ul>
-
-  <div class="d-flex align-items-center mb-3">
-    <% if @event.group.present? %>
-      <%= link_to group_path(@event.group) do %>
-        <% if @event.group.photos.attached? %>
-          <div class="m-3">
-            <%= cl_image_tag @event.group.photos[0].key, :width => 100, :height => 100, crop: :fill %>
-          </div>
+    <div class="d-flex align-items-center mb-3">
+      <% if @event.group.present? %>
+        <%= link_to group_path(@event.group) do %>
+          <% if @event.group.photos.attached? %>
+            <div class="m-3">
+              <%= cl_image_tag @event.group.photos[0].key, :width => 100, :height => 100, crop: :fill %>
+            </div>
+        <% end %>
+        <div class="m-3">
+          <h4><%= @event.group.title %></h4>
+          <%= @event.group.private ? "Private Group" : "Public Group" %>
+        </div>
       <% end %>
-      <div class="m-3">
-        <h4><%= @event.group.title %></h4>
-        <%= @event.group.private ? "Private Group" : "Public Group" %>
-      </div>
     <% end %>
-  <% end %>
-  </div>
-</div>
-
-
-<div data-controller="show-map">
-  <div data-show-map-target="mymap" class="">
-    <div data-post-target="map">
-      <div style="width: 100%; height: 300px;"
-        data-controller="map"
-        data-map-markers-value="<%= @markers.to_json %>"
-        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-      </div>
     </div>
   </div>
-  <button data-action="click->show-map#show">Hide/Show Map</button>
-</div>
-
-<h5 class="mt-3"><strong>Members that joined</strong></h5>
-<div class="members-avatars">
-  <% @event.bookings.each do |booking| %>
-    <%= cl_image_tag booking.user.photo.key, class: "each-member-avatar", width: 60, height: 60, crop: :thumb, gravity: :face %>
-  <% end %>
-  <% (@event.spots_available - @event.bookings.count).times do %>
-    <%= link_to event_bookings_path(@event), data: {turbo_method: :post, turbo_confirm: "Yeah! Confirm to join #{@event.title}"} do %>
-      <%= image_tag "placeholder.png", class: "each-member-avatar", width: 60, height: 60, crop: :thumb %>
-    <% end %>
-  <% end %>
-</div>
-
-<% if @user_has_bookings %>
-  <%= link_to "Join event",
-    event_bookings_path(@event),
-    data: {turbo_method: :post, turbo_confirm: "Yeah! Confirm to join #{@event.title}"}
-  %>
-  <br>
-<% end %>
-<% if @user_has_bookings == true && current_user.present? %>
-  <%= link_to "Leave event",
-    delete_booking_path(@event),
-    data: {turbo_method: :delete, turbo_confirm: "Oh no! Do you really want to leave #{@event.title}"}
-  %>
-  <br>
-<% end %>
-<% if current_user && @event.user_id == current_user.id %>
-  <%= link_to 'Edit event', edit_event_path(@event) %>
-  <br>
-  <%= link_to "Delete event",
-    event_path(@event),
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete #{@event.title}?"}
-  %>
-<% end %>
-
-<br>
-<div class="container p-5 group-info">
-  <h3>Description</h3>
-  <%= @event.description %>
-</div>
 
 
-
-<%# ############# Chatroom ##############%>
-<% if current_user %>
-  <div class="container chatroom"
-    data-controller="chatroom-subscription"
-    data-chatroom-subscription-chatroom-id-value="<%= @event.chatroom.id %>"
-    data-chatroom-subscription-current-user-id-value="<%= current_user.id %>">
-
-    <h2>Event Chat</h2>
-
-    <div class="messages" data-chatroom-subscription-target="messages">
-    <% @event.chatroom.messages.each do |message| %>
-    <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
-      <div class="<%= message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
-        <%= render "messages/message", message: message %>
+  <div data-controller="show-map">
+    <div data-show-map-target="mymap" class="">
+      <div data-post-target="map">
+        <div style="width: 100%; height: 300px;"
+          data-controller="map"
+          data-map-markers-value="<%= @markers.to_json %>"
+          data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
       </div>
     </div>
-  <% end %>
+    <button data-action="click->show-map#show">Hide/Show Map</button>
   </div>
 
-  <%= simple_form_for [@event, @event.chatroom, @message],
-    html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f|
-  %>
-    <%= f.input :content,
-      label: false,
-      placeholder: "Message in #{@event.title}",
-      wrapper_html: {class: "flex-grow-1"}
+  <h5 class="mt-3"><strong>Members that joined</strong></h5>
+  <div class="members-avatars">
+    <% @event.bookings.each do |booking| %>
+      <%= cl_image_tag booking.user.photo.key, class: "each-member-avatar", width: 60, height: 60, crop: :thumb, gravity: :face %>
+    <% end %>
+    <% (@event.spots_available - @event.bookings.count).times do %>
+      <%= link_to event_bookings_path(@event), data: {turbo_method: :post, turbo_confirm: "Yeah! Confirm to join #{@event.title}"} do %>
+        <%= image_tag "placeholder.png", class: "each-member-avatar", width: 60, height: 60, crop: :thumb %>
+      <% end %>
+    <% end %>
+  </div>
+
+  <% if @user_has_bookings %>
+    <%= link_to "Join event",
+      event_bookings_path(@event),
+      data: {turbo_method: :post, turbo_confirm: "Yeah! Confirm to join #{@event.title}"}
     %>
-    <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+    <br>
   <% end %>
-<% end %>
+  <% if @user_has_bookings == true && current_user.present? %>
+    <%= link_to "Leave event",
+      delete_booking_path(@event),
+      data: {turbo_method: :delete, turbo_confirm: "Oh no! Do you really want to leave #{@event.title}"}
+    %>
+    <br>
+  <% end %>
+  <% if current_user && @event.user_id == current_user.id %>
+    <%= link_to 'Edit event', edit_event_path(@event) %>
+    <br>
+    <%= link_to "Delete event",
+      event_path(@event),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete #{@event.title}?"}
+    %>
+  <% end %>
+
+  <br>
+  <div class="container p-5 group-info">
+    <h3>Description</h3>
+    <%= @event.description %>
+  </div>
+
+
+
+  <%# ############# Chatroom ##############%>
+  <% if current_user %>
+    <div class="container chatroom"
+      data-controller="chatroom-subscription"
+      data-chatroom-subscription-chatroom-id-value="<%= @event.chatroom.id %>"
+      data-chatroom-subscription-current-user-id-value="<%= current_user.id %>">
+
+      <h2>Event Chat</h2>
+
+      <div class="messages" data-chatroom-subscription-target="messages">
+      <% @event.chatroom.messages.each do |message| %>
+      <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
+        <div class="<%= message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
+          <%= render "messages/message", message: message %>
+        </div>
+      </div>
+    <% end %>
+    </div>
+
+    <%= simple_form_for [@event, @event.chatroom, @message],
+      html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f|
+    %>
+      <%= f.input :content,
+        label: false,
+        placeholder: "Message in #{@event.title}",
+        wrapper_html: {class: "flex-grow-1"}
+      %>
+      <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+    <% end %>
+  <% end %>
+</div>
