--- a/app/views/shared/_home_banner.html.erb
+++ b/app/views/shared/_home_banner.html.erb
@@ -1,9 +1,9 @@
 <div class="home-banner">
   <div class="container">
-    <h2>Find a sport near you!</h2>
+    <h2>Find a team near you!</h2>
     <br>
     <div class="button d-flex justify-content-center">
-      <%= link_to "Find an Event", events_path, class: "btn btn-primary btn-lg" %>
+      <%= link_to "Search Events", events_path, class: "btn btn-primary btn-lg" %>
     </div>
   </div>
 </div>
