--- a/app/assets/stylesheets/components/_group_info.scss
+++ b/app/assets/stylesheets/components/_group_info.scss
@@ -1,5 +1,5 @@
 .group-info {
-  background-color: lightgrey;
+  background-color: $bg-white;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 12px;
