--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
   <% @group.photos.each do |photo| %>
     <% if photo %>
       <%= cl_image_tag photo.key, class: "img-fluid", crop: :fill %>
@@ -6,12 +5,15 @@
         <img style="width: 100%" src="https://placehold.co/900x600" alt="main image">
     <% end %>
   <% end %>
-  <h1 class="mt-3"><strong><%= @group.title %></strong></h1>
+
+
   <!-- GROUP INFO -->
   <div class="group-info mb-3">
+  <h1 class="mt-3"><strong><%= @group.title %></strong></h1>
     <%= render "shared/group_info" %>
   </div>
 
+<div class="container mt-4">
   <% if current_user.groups.exclude?(@group) %>
     <%= render "shared/group_description" %>
     <%= render "shared/unjoined_group_members" %>
@@ -42,8 +44,8 @@
       <div class="tab-pane fade mt-3" id="members" role="tabpanel" aria-labelledby="members-tab">
         <%= render "shared/joined_group_members" %>
         <!-- LEAVE GROUP BUTTON -->
-        <div class="d-flex justify-content-center">
-          <%= link_to "Leave Group", user_group_path(@usergroup), data: {turbo_method: :delete}, class:"btn btn-warning col-9" %>
+        <div class="d-flex justify-content-center mt-4">
+          <%= link_to "Leave Group", user_group_path(@usergroup), data: {turbo_method: :delete}, class:"btn btn-warning col-6 rounded-pill" %>
         </div>
       </div>
       <!-- IF JOINED: UPCOMING EVENTS, ELSE: NOTHING -->
@@ -52,7 +54,7 @@
       </div>
       <!-- IF JOINED: DISCUSSION, ELSE: NOTHING -->
       <div class="tab-pane fade" id="discussion" role="tabpanel" aria-labelledby="discussion-tab">
-        <%= render "posts", posts: @group.posts %>
+        <%= render "shared/group_posts", posts: @group.posts %>
       </div>
     </div>
   <% end %>
