--- a/app/views/shared/_group_description.html.erb
+++ b/app/views/shared/_group_description.html.erb
@@ -1,2 +1,4 @@
-<h5><strong>Description</strong></h5>
-<%= @group.description %>
+<div class="container mt-4">
+  <h5 class="mb-4">Description</h5>
+  <%= @group.description %>
+</div>
