--- a/app/views/shared/_group_info.html.erb
+++ b/app/views/shared/_group_info.html.erb
@@ -13,8 +13,9 @@
 </div>
 <div class="button d-flex justify-content-center">
   <% if current_user.groups.include?(@group) %>
-    <button class="btn btn-success"> You're a member </button>
+    <button class="btn btn-success mt-3 col-6 rounded-pill"> You're a member </button>
   <% else %>
-    <%= link_to "Join Group", group_user_groups_path(@group), data: {turbo_method: :post}, class:"btn btn-primary col-9" %>
+    <%= link_to "Join Group", group_user_groups_path(@group), data: {turbo_method: :post}, class:"btn btn-primary col-6 rounded-pill" %>
   <% end %>
 </div>
+<br>
