--- a/app/views/shared/_joined_group_members.html.erb
+++ b/app/views/shared/_joined_group_members.html.erb
@@ -1,6 +1,8 @@
-<h5><strong>Group members</strong></h5>
-<div class="members-avatars d-flex flex-wrap">
-  <% @users.each do |user| %>
-    <%= cl_image_tag user.photo.key, class: "each-member-avatar mb-2", width: 60, height: 60, crop: :thumb, gravity: :face %>
-  <% end %>
+<div class="container mt-4">
+  <h5 class="mb-4">Group Members</h5>
+  <div class="members-avatars d-flex flex-wrap justify-content-between">
+    <% @users.each do |user| %>
+      <%= cl_image_tag user.photo.key, class: "each-member-avatar mb-2", width: 60, height: 60, crop: :thumb, gravity: :face %>
+    <% end %>
+  </div>
 </div>
