--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,9 @@
 // Define variables for your color scheme
-
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
+$red: #CE440F;
+$blue: #0C8DD8;
+$green: #579D53;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$yellow: #ECAD00;
+$orange: #CD701E;
