--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -51,9 +51,10 @@
                 <li class="nav-item"><%= link_to "Your Events", user_events_path %></li>
                 <li class="nav-item"><%= link_to "Your Groups", user_groups_path %></li>
                 <hr>
-                <li class="nav-item"><%= link_to "Find a Group", groups_path %></li>
                 <li class="nav-item"><%= link_to "Find an Event", events_path %></li>
                 <li class="nav-item"><%= link_to "Create an Event", new_event_path %></li>
+                <li class="nav-item"><%= link_to "Find a Group", groups_path %></li>
+                <li class="nav-item"><%= link_to "Create a Group", new_group_path %></li>
                 <hr>
                 <li class="nav-item"><%= link_to "Edit Profile", edit_user_registration_path %></li>
                 <li class="nav-item"><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: "delete" } %></li>
