--- a/app/views/shared/_index_card_all.html.erb
+++ b/app/views/shared/_index_card_all.html.erb
@@ -11,7 +11,7 @@
         <p class="event-card-long-text"><%= event.start_date.strftime('%a, %b %d %Y %H:%M') %></p>
         <h5 class="event-card-long-title"><%= event.title %></h5>
         <p class="event-card-long-text"> <%= pluralize(event.bookings.size, 'Attendee') %> | <%= pluralize(event.spots_left(event), 'Spot') %> Left</p>
-        <p class="event-card-long-text"><%= event.city(event) %></p>
+        <p class="event-card-long-text"><%= event.city %></p>
       </div>
     </div>
   <% end %>
