styling buttons and group page

--- a/app/views/dashboard/user_groups.html.erb
+++ b/app/views/dashboard/user_groups.html.erb
@@ -31,6 +31,6 @@
   </div>
 <br><br>
   <div class="text-center mt-6">
-    <%= link_to "Back to Profile", profile_path, class: "btn btn-outline-primary" %>
+    <%= link_to "Back to Profile", profile_path, class: "btn btn-outline-primary mt-3 col-6 rounded-pill" %>
   </div>
 </div>
