--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,5 +42,5 @@
 
   <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-  <%= link_to "Back", :back %>
+  <%= link_to "Back", :back, class="btn btn-outline-primary mt-3 rounded-pill"%>
 </div>
