--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="form-actions text-center mt-6">
-      <%= f.button :submit, "Sign up", class: "btn btn-primary text-center" %>
+      <%= f.button :submit, "Sign up", class: "btn btn-primary col-6 mt-3 rounded-pill" %>
     </div>
   <% end %>
 
