--- a/app/views/shared/_group_form.html.erb
+++ b/app/views/shared/_group_form.html.erb
@@ -25,6 +25,6 @@
                 input_html: { class: "private" } %>
   </div>
   <div class="text-center form-actions">
-    <%= f.button :submit, "Save", class: "btn btn-primary btn-lg" %>
+    <%= f.button :submit, "Save", class: "btn btn-primary col-6 mt-3 rounded-pill" %>
   </div>
 <% end %>
