--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -60,9 +60,15 @@
               </ul>
             <% else %>
               <div class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary" %>
-                <br>
-                <%= link_to "Log in", new_user_session_path, class: "btn btn-primary" %>
+                <div class="text-center">
+                  <h5>Not yet a member?</h5>
+                  <p>Sign-up & TeamUp!</p>
+                  <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary col-8 mt-3 rounded-pill" %>
+                  <br><br><hr><br>
+                  <h5>Already have an account?</h5>
+                  <p>Welcome back!</p>
+                  <%= link_to "Log in", new_user_session_path, class: "btn btn-primary col-8 mt-3 rounded-pill" %>
+                </div>
               </div>
             <% end %>
           </div>
