--- a/app/views/dashboard/profile.html.erb
+++ b/app/views/dashboard/profile.html.erb
@@ -26,7 +26,7 @@
     </div>
 
     <div class="text-center">
-      <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-outline-primary" %>
+      <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-outline-primary mt-3 col-6 rounded-pill" %>
     </div>
   </div>
   <br><br>
@@ -42,7 +42,7 @@
       </div>
   <br><br>
     <div class="text-center">
-      <%= link_to "View All Events", user_events_path, class: "btn btn-primary" %>
+      <%= link_to "View All Events", user_events_path, class: "btn btn-primary mt-3 col-6 rounded-pill" %>
     </div>
   </div>
   <br><br>
@@ -57,7 +57,7 @@
       </div>
   <br><br>
     <div class="text-center">
-      <%= link_to "View All Groups", user_groups_path, class: "btn btn-primary" %>
+      <%= link_to "View All Groups", user_groups_path, class: "btn btn-primary mt-3 col-6 rounded-pill" %>
     </div>
   </div>
 
