--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -21,9 +21,10 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Change my password", class: "btn btn-primary" %>
+      <%= f.button :submit, "Change my password", class: "btn btn-primary mt-3 rounded-pill" %>
     </div>
   <% end %>
 
   <%= render "devise/shared/links" %>
 </div>
+
