--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,31 +1,31 @@
-<div class="container">
-  <h2>Create an Event</h2>
+<div class="container mt-4">
+  <h2 class="mb-4">Create an Event</h2>
 
   <%= simple_form_for @event do |f| %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.input :start_date, as: :string, requiered: true, input_html: { data: { controller: "datepicker" } } %>
-  <%= f.input :end_date, as: :string, requiered: true, input_html: { data: { controller: "datepicker" } } %>
-  <%= f.input :address,
-  input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
-  wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
-  %>
-  <%= f.input :price %>
-  <%= f.input :spots_available, as: :integer %>
-  <%= f.input :category,
-    collection: @categories,
-    prompt: "Select a category",
-    required: true,
-    autofocus: true %>
-  <%= f.input :level,
-    collection: @level,
-    prompt: "Select a level",
-    required: true,
-    autofocus: true %>
-  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.button :submit %>
-<% end %>
-
-
-
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :start_date, as: :string, requiered: true, input_html: { data: { controller: "datepicker" } } %>
+    <%= f.input :end_date, as: :string, requiered: true, input_html: { data: { controller: "datepicker" } } %>
+    <%= f.input :address,
+    input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+    wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+    %>
+    <%= f.input :price %>
+    <%= f.input :spots_available, as: :integer %>
+    <%= f.input :category,
+      collection: @categories,
+      prompt: "Select a category",
+      required: true,
+      autofocus: true %>
+    <%= f.input :level,
+      collection: @level,
+      prompt: "Select a level",
+      required: true,
+      autofocus: true %>
+    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <div class="text-center">
+      <%= f.button :submit, class: "btn btn-primary col-6 mt-3 rounded-pill" %>
+    </div>
+  <% end %>
+<br><br>
 </div>
