--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,12 +1,4 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-lg-6 col-md-8">
-      <div class="card bg-light shadow">
-        <div class="card-body">
-          <h3 class="card-title text-center mb-4">CREATE A NEW GROUP</h3>
-              <%= render "shared/group_form" %>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="container mt-4">
+  <h2 class="mb-4">Create a New Group</h2>
+    <%= render "shared/group_form" %>
 </div>
