many changes lol i forgot to commit inbetween

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -14,9 +14,10 @@
 }
 
 .sender-style {
-  background-color: lightcoral;
+  background-color: $blue;
+  color: white;
 }
 
 .receiver-style {
-  background-color: lightblue;
+  background-color: $light-gray;
 }
