--- a/app/views/shared/_group_card_long.html.erb
+++ b/app/views/shared/_group_card_long.html.erb
@@ -1,14 +1,13 @@
 <%= link_to group_path(group) do %>
   <div class="group-card-long">
     <% if group.photos.attached? %>
-      <%= cl_image_tag group.photos[0].key, height: 100, width: 360, crop: :fill, class: "group-card-long-image" %>
+      <%= cl_image_tag group.photos[0].key, crop: :fill, class: "group-card-long-image" %>
     <% else %>
       <img src="https://placehold.co/600x400" alt="Group Image 1" class="group-card-long-image">
     <% end %>
-    <div class="group-card-long-details">
+    <div class="group-card-long-bottom">
       <h5 class="group-card-long-title"><%= group.title %></h5>
       <p class="group-card-long-text">Location: <%= group.city %> </p>
-      <p class="group-card-long-text">Members: <%= @user_count %> </p>
       <p class="group-card-long-text">Category: <%= group.category %> </p>
     </div>
   </div>
