--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -29,7 +29,7 @@
   </div>
   <br><br>
   <div class="text-center">
-    <%= link_to "See all Events in #{@city}", events_path(query: "#{@city}"), class: "btn btn-primary btn-lg" %>
+    <%= link_to "See all Events in #{@city}", events_path(city: "#{@city}"), class: "btn btn-primary btn-lg" %>
   </div>
   <br>
 </div>
