--- a/app/views/shared/_level_filter.html.erb
+++ b/app/views/shared/_level_filter.html.erb
@@ -1,10 +1,10 @@
 <div class="level-filter">
-      <div class="city-dropdown" style="margin-bottom:5px; background-color:#fff">
+      <div class="city-dropdown">
         <button style="border-width:0;" class=" dropdown-toggle m-0"
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false">
-          <span style="font-size:1.8em; color:orange; ">Level</span>
+          <span>Level</span>
         </button>
         <ul class="dropdown-menu">
           <li><a data-filter-target="level"
@@ -25,4 +25,5 @@
         </ul>
   </div>
 
+  <div class="" data-filter-target="selectedlevel"></div>
 </div>
