--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -6,7 +6,7 @@
   <div class="flash-notice">
     <h2><%= notice %></h2>
   </div>
-    <button class="btn btn-primary flash-btn" data-bs-dismiss="alert" aria-label="Close">Cool!</button>
+    <button class="btn btn-primary mt-3 col-6 rounded-pill flash-btn" data-bs-dismiss="alert" aria-label="Close">Cool!</button>
   </div>
 <% end %>
 <% if alert %>
@@ -17,6 +17,6 @@
   <div class="flash-notice">
     <h2><%= alert %></h2>
   </div>
-    <button class="btn btn-primary flash-btn" data-bs-dismiss="alert" aria-label="Close">Okay</button>
+    <button class="btn btn-primary mt-3 col-6 rounded-pill flash-btn" data-bs-dismiss="alert" aria-label="Close">Okay</button>
   </div>
 <% end %>
