--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -4,8 +4,8 @@
   <%= simple_form_for @event, html: { multipart: true } do |f| %>
     <%= f.input :title %>
     <%= f.input :description%>
-    <%= f.input :start_date, as: :datetime %>
-    <%= f.input :end_date, as: :datetime %>
+    <%= f.input :start_date, as: :string, requiered: true, input_html: { data: { controller: "datepicker" } } %>
+    <%= f.input :end_date, as: :string, requiered: true, input_html: { data: { controller: "datepicker" } } %>
     <%= f.input :address,
     input_html: {data: {address_autocomplete_target: "address"}, class: "d-none", placeholder: 'hello' },
     wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_address_value: @event.address, address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
