--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,9 +4,6 @@
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
-
-      <%= f.input :first_name %>
-      <%= f.input :last_name %>
     <div class="form-inputs">
       <%= f.input :first_name %>
       <%= f.input :last_name %>
@@ -33,8 +30,8 @@
                   input_html: { autocomplete: "current-password" } %>
     </div>
 
-    < class="form-actions">
-      <%= f.button :submit, "Update" %>
+    <div class="form-actions text-center mt-6">
+      <%= f.button :submit, "Update", class: "btn btn-outline-primary mt-3 rounded-pill" %>
     </div>
   <% end %>
 
@@ -43,3 +40,4 @@
   <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
   <%= link_to "Back", :back, class: "btn btn-outline-primary mt-3 rounded-pill" %>
+</div>
