--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -23,6 +23,7 @@
       required: true,
       autofocus: true %>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <%= f.input :group_id, as: :hidden %>
     <div class="text-center">
       <%= f.button :submit, class: "btn btn-primary col-6 mt-3 rounded-pill" %>
     </div>
