--- a/app/views/shared/_level_filter.html.erb
+++ b/app/views/shared/_level_filter.html.erb
@@ -1,10 +1,11 @@
+
 <div class="level-filter">
-      <div class="city-dropdown">
-        <button style="border-width:0;" class=" dropdown-toggle m-0"
+      <div class="filter-dropdown">
+        <button class="filter-button dropdown-toggle m-0 text-secondary"
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false">
-          <span>Level</span>
+          <span class="filter-item" >Level</span>
         </button>
         <ul class="dropdown-menu">
           <li><a data-filter-target="level"
@@ -25,5 +26,6 @@
         </ul>
   </div>
 
-  <div class="" data-filter-target="selectedlevel"></div>
+  <div class="filter-selection"  data-filter-target="selectedlevel"></div>
+
 </div>
