--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -2,14 +2,14 @@
 
 <%= render "shared/category_bar" %>
 <div class="results-card-container">
-  <div class="d-flex align-items-center gap-2">
+  <div class="d-flex align-items-center gap-0">
     <h2> Top 5 events in </h2>
-    <div class="city-dropdown" style="margin-bottom:5px; background-color:#fff">
+    <div class="city-dropdown" style="margin-bottom:5px;">
       <button style="border-width:0;" class=" dropdown-toggle m-0"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false">
-        <span style="font-size:1.8em; color:orange; "> <%= @city %></span>
+        <span style="font-weight: 500; font-size:calc(1.325rem + 0.9vw); font-family:Inter, Helvetica, sans-serif; color:#0D6EFD; line-height: 1.2; margin-bottom: 0.5rem;"><%= @city %></span>
       </button>
       <ul class="dropdown-menu">
       <% @unique_citys.each do |city| %>
