--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -63,7 +63,7 @@
       <% end %>
     <% end %>
     <br>
-    <% unless current_user && @event.user_id == current_user.id %>
+    <% if user_signed_in? && @event.user_id == current_user.id %>
       <% if current_user.events.include?(@event) %>
         <%= link_to "Leave event",
           delete_booking_path(@event),
@@ -76,7 +76,7 @@
   </div>
 
   <div class="d-flex mt-2 gap-1">
-    <% if current_user && @event.user_id == current_user.id %>
+    <% if user_signed_in? && @event.user_id == current_user.id %>
       <%= link_to 'Edit event', edit_event_path(@event), class: "btn btn-warning rounded-pill" %>
       <br>
       <%= link_to "Delete event",
@@ -95,7 +95,7 @@
 
 
   <%# ############# Chatroom ##############%>
-  <% if current_user.events.include?(@event) %>
+  <% if user_signed_in? && current_user.events.include?(@event) %>
   <div class="container chatroom"
       data-controller="chatroom-subscription"
       data-chatroom-subscription-chatroom-id-value="<%= @event.chatroom.id %>"
@@ -128,7 +128,7 @@
 </div>
 
 <div class="join-event text-align-center">
-  <% if current_user.events.exclude?(@event) %>
+  <% if user_signed_in? && current_user.events.exclude?(@event) %>
     <%= link_to "Join event",
       event_bookings_path(@event),
       class: "btn btn-primary col-8 offset-2 p-3 justify-content-center rounded-pill",
