--- a/app/assets/stylesheets/components/_group_card_long.scss
+++ b/app/assets/stylesheets/components/_group_card_long.scss
@@ -18,11 +18,29 @@
 .group-card-long-title {
   font-weight: bold;
   color: $gray;
+  // text-align: center;
 }
 
 a {
   text-decoration: none !important;
   color: inherit;
+}
+
+.group-card-long-category{
+  text-align: center;
+  color: #ffffff;
+  background-color: $blue;
+  border-top-left-radius: 80px 80px;
+  border-bottom-left-radius: 80px 80px;
+  width: 130px;
+  padding: 5px 3px 0px 3px;
+  position: absolute;
+  bottom: 10px;
+  right: 0px;
+}
+
+.group-card-long-img-container{
+  position: relative;
 }
 
 .group-card-long-image {
@@ -34,14 +52,4 @@ a {
 .group-card-long-bottom {
   padding: 15px 15px;
   margin: 5px 0;
-}
-
-.event-card-long-name {
-  margin-top: 0;
-}
-
-.event-card-long-text {
-  margin: 0px;
-  font-size: 15px;
-  color: #3d3d3d;
 }
