--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -62,8 +62,9 @@
         <%= image_tag "placeholder.png", class: "each-member-avatar", width: 60, height: 60, crop: :thumb %>
       <% end %>
     <% end %>
+  </div>
     <br>
-    <% if user_signed_in? && @event.user_id == current_user.id %>
+    <% if user_signed_in? && @event.user_id != current_user.id %>
       <% if current_user.events.include?(@event) %>
         <%= link_to "Leave event",
           delete_booking_path(@event),
@@ -73,7 +74,7 @@
         <br>
       <% end %>
     <% end %>
-  </div>
+
 
   <div class="d-flex mt-2 gap-1">
     <% if user_signed_in? && @event.user_id == current_user.id %>
@@ -125,6 +126,9 @@
     <% end %>
   <% end %>
   </div>
+</div>
+
+<div style= "margin-bottom: 80px;">
 </div>
 
 <div class="join-event text-align-center">
