--- a/app/views/shared/_level_filter.html.erb
+++ b/app/views/shared/_level_filter.html.erb
@@ -26,6 +26,6 @@
         </ul>
   </div>
 
-  <div class="filter-selection"  data-filter-target="selectedlevel"></div>
+  <div class="filter-selection d-none"  data-filter-target="selectedlevel"></div>
 
 </div>
