--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -24,7 +24,7 @@
       autofocus: true %>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <div class="form-actions text-center mt-6">
-    <%= f.button :submit, class: "btn btn-primary text-center" %>
+    <%= f.button :submit, class: "btn btn-primary text-center rounded-pill" %>
   </div>
   <% end %>
 </div>
