--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -54,8 +54,12 @@
 
   <h5 class="mb-4">Members That Joined</h5>
   <div class="members-avatars d-flex flex-wrap">
-    <% @event.bookings.each do |booking| %>
-      <%= cl_image_tag booking.user.photo.key, class: "each-member-avatar", width: 60, height: 60, crop: :thumb, gravity: :face %>
+    <% @event.bookings.each_with_index do |booking, index| %>
+      <% if index == 0 %>
+        <%= cl_image_tag booking.user.photo.key, class: "each-member-avatar creator", width: 60, height: 60, crop: :thumb, gravity: :face %>
+      <% else %>
+        <%= cl_image_tag booking.user.photo.key, class: "each-member-avatar", width: 60, height: 60, crop: :thumb, gravity: :face %>
+      <% end %>
     <% end %>
     <% (@event.spots_available - @event.bookings.count).times do %>
       <%= link_to event_bookings_path(@event), data: {turbo_method: :post, turbo_confirm: "Yeah! Confirm to join #{@event.title}"} do %>
