--- a/app/views/shared/_event_card_long.html.erb
+++ b/app/views/shared/_event_card_long.html.erb
@@ -8,7 +8,7 @@
     <div class="event-card-long-right">
       <p class="event-card-long-text"><%= event.start_date.strftime('%a, %d %b - %H:%M') %></p>
       <h5 class="event-card-long-title"><%= event.title %></h5>
-      <p class="event-card-long-text"><span class="fa-li"><i class="fa-solid fa-users"></i></i></span> <%= pluralize(event.bookings.size, 'Attendee') %> | <%= pluralize(event.spots_left(event), 'Spot') %> Left</p>
+      <p class="event-card-long-text"><%= pluralize(event.bookings.size, 'Attendee') %> | <%= pluralize(event.spots_left(event), 'Spot') %> Left</p>
       <p class="event-card-long-text"><%= event.city %></p>
     </div>
   </div>
